--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 RewriteEngine on
-RewriteRule ^image.png$ https://arthurbissi.github.io/middle_click [L,R=301]
+RewriteRule ^clickgif.gif$ https://arthurbissi.github.io/middle_click [L,R=301]
